scripts/tests/errors/err_class_bad_parent.bu
// BAD: class inheriting from non-existent class, with while after
class Child : NonExistentParent
{
    def init() {}
}

while (true) {
    break;
}
print("should not reach here");
